2014-05-06  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-remote-process-environment): Remove
	HISTFILE and HISTSIZE; it's too late to set them here.  Add
	:version entry.
	(tramp-open-shell): Do not let-bind `tramp-end-of-output'.  Add
	"HISTSIZE=/dev/null" to the shell's env arguments.  Do not send
	extra "PSx=..." commands.
	(tramp-maybe-open-connection): Setenv HISTFILE to /dev/null.
	(Bug#17295)

	(tramp-uudecode): Replace the hard-coded temporary file name by a
	format specifier.
	(tramp-remote-coding-commands): Enhance docstring.
	(tramp-find-inline-encoding): Replace "%t" by a temporary file
	name.  (Bug#17415)

2014-05-06  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/find-gc.el (find-gc-source-directory): Give it a value.
	(find-gc-source-files): Update some names.
	(trace-call-tree): Simplify and update.
	Avoid predictable temp-file names.  (http://bugs.debian.org/747100)

2013-03-11  Glenn Morris  <rgm@gnu.org>

	* Version 24.3 released.

2013-02-25  Glenn Morris  <rgm@gnu.org>

	* textmodes/paragraphs.el (mark-paragraph): Doc fix.

2013-02-21  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-lazy-highlight-new-loop):
	Set `isearch-lazy-highlight-start' and `isearch-lazy-highlight-end'
	to `isearch-other-end' if it is not nil.  (Bug#13402)

	* replace.el (replace-highlight): Let-bind `isearch-other-end'
	to `match-beg'.

	* textmodes/ispell.el (ispell-highlight-spelling-error-overlay):
	Let-bind `isearch-other-end' to `start', `isearch-forward' to t
	and `isearch-error' to nil.

2013-02-20  Fabián Ezequiel Gallina  <fgallina@cuca>

	* progmodes/python.el (python-info-current-defun): Enhance
	match-data cluttering prevention.

2013-02-19  Glenn Morris  <rgm@gnu.org>

	* net/tramp.el (tramp-get-debug-buffer): Ensure outline.el is not
	loaded while outline-regexp is let bound.  (Bug#9584)

2013-02-19  Fabián Ezequiel Gallina  <fgallina@cuca>

	* progmodes/python.el (python-info-current-defun): Fix failed